white slack icon in footer, fixes load flicker

--- a/app/web/components/common/footer.css
+++ b/app/web/components/common/footer.css
@@ -24,6 +24,9 @@ footer {
   width: auto;
   padding: 0 5%;
 }
+.footerIcon.slack {
+  transform: scale(1.3);
+}
 
 
 .copyrightParent {
